Media Query fixes again
Ok, so fixed the issue with the header increasing so the body now jumps down 60px, made the about image 100% on mobile so it doesn't look rubbish. Fingers crossed

--- a/style.css
+++ b/style.css
@@ -219,6 +219,17 @@ p.contact-intro {
 		padding: 10px; /* Adjust padding for smaller screens */
 		font-size: 0.8rem; /* Adjust the font size for smaller screens */
 	}
+	header {
+		font-size: 1.5rem; /* Maintain the same font size on smaller screens */
+	}
+	.about-image{
+		object-fit: contain ;
+		width: 100%;
+		height: 500px;
+	}
+	body {
+		margin-top: 60px; /* Adjust margin-top to make room for the fixed header */
+	}
 }
 
 
